Some smells fixed